# faculty_finder_urms

./: README.md  app.py  pyproject.toml
src/dataset/: fall_data.xlsx
src/notebook/: courses_extract.ipynb  processing.ipynb
src/notebook/.ipynb_checkpoints/: processing-checkpoint.ipynb
src/scripts/: class_approach.py  course_manager.py  data.xlsx  script.py
