[tool.poetry]
name = "ulab-data"
version = "0.1.0"
description = ""
authors = ["Masab <contact.masab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyter = "^1.1.1"
openpyxl = "^3.1.5"
streamlit = "^1.41.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
